fixed z-index issue

--- a/front-end/css/empty.css
+++ b/front-end/css/empty.css
@@ -140,7 +140,7 @@ body {
   height: 100%;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-  z-index: 3;
+  z-index: 4;
 }
 
 .developer-iframe {
